@@ -1,5 +1,12 @@
 2004-06-25  Adam D. Moss  <adam@gimp.org>
 
+        * openal/linux/src/configure.in
+        * openal/linux/src/arch/arts/arts.c
+        * openal/linux/src/arch/esd/esd.c: From Marco Ziech <mmz@gmx.net>:
+        Add option to load arts and esd libraries at run-time.
+
+2004-06-25  Adam D. Moss  <adam@gimp.org>
+
         * openal/linux/src/arch/alsa/alsa.c
         * openal/linux/src/alc/alc_context.c: If _alcDeviceSet() fails then
         return straight after setting the error code, instead of proceeding
